--- a/styles/app.css
+++ b/styles/app.css
@@ -10,15 +10,19 @@
     h1{
         @apply text-white text-3xl p-10
     }
+    /*
     label{
         @apply text-white  text-2xl 
     }
+    */
     form{
         @apply flex flex-col
     }
+    /*
     input{
-        @apply p-3 w-full text-xl
+        @apply  w-full text-xl
     }
+    */
     button{
         @apply p-10 mb-15 bg-transparent hover:bg-blue-500 text-indigo-400 font-semibold hover:text-white py-2 px-4 border border-indigo-400 hover:border-transparent rounded
     }
