--- a/styles/app.css
+++ b/styles/app.css
@@ -10,24 +10,33 @@
     h1{
         @apply text-white text-3xl p-10
     }
-    /*
+    p{
+        @apply text-white text-3xl
+    }
+    
     label{
         @apply text-white  text-2xl 
     }
-    */
+    
     form{
         @apply flex flex-col
     }
-    /*
+    
     input{
-        @apply  w-full text-xl
+        @apply  w-full text-xl m-10 p-5 rounded-xl
     }
-    */
+    
     button{
-        @apply p-10 mb-15 bg-transparent hover:bg-blue-500 text-indigo-400 font-semibold hover:text-white py-2 px-4 border border-indigo-400 hover:border-transparent rounded
+        @apply p-10  bg-transparent hover:bg-blue-500 text-indigo-400 font-semibold hover:text-white py-2 px-4 border border-indigo-400 hover:border-transparent rounded
     }
     a{
         @apply text-blue-400 p-10 text-xl
+    }
+    .red-button{
+        @apply bg-transparent hover:bg-red-600 border-white text-white bg-red-400
+    }
+    .green-button{
+        @apply bg-transparent hover:bg-green-600 border-white text-white bg-green-400
     }
 }
 
