--- a/styles/app.css
+++ b/styles/app.css
@@ -5,7 +5,10 @@
 
 @layer base{
     html{
-       @apply bg-zinc-900
+       @apply bg-[#1c1c1c]
+    }
+    body{
+        @apply bg-[#1c1c1c]
     }
     h1{
         @apply text-white text-3xl p-10
