--- a/styles/app.css
+++ b/styles/app.css
@@ -26,7 +26,7 @@
     }
     
     input{
-        @apply  w-full text-xl m-10 p-5 rounded-xl
+        @apply  w-full text-xl m-7 p-5 rounded-xl
     }
     
     button{
@@ -39,7 +39,10 @@
         @apply bg-transparent hover:bg-red-600 border-white text-white bg-red-400
     }
     .green-button{
-        @apply bg-transparent hover:bg-green-600 border-white text-white bg-green-400
+        @apply bg-transparent hover:bg-green-700 border-white text-white bg-green-600
+    }
+    .alert-error{
+        @apply text-xl text-red-500 p-2
     }
 }
 
